--- a/apps/website/src/components/hamburger-menu/hamburger-menu.scss
+++ b/apps/website/src/components/hamburger-menu/hamburger-menu.scss
@@ -53,6 +53,7 @@
   background: none !important;
   transition: none;
   opacity: 0;
+  display: none;
 
   &::after {
     content: "";
